data/derived/comb/progs/unify/prog0140.ml.out
Characters 87-91:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type 'a -> 'a
       but an expression was expected of type 'b list
